--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,85 @@
-# Environment Configuration for Bowman Draft Tracker
+# Bowman Draft Box Tracker - Environment Configuration
 # Copy this file to .env and fill in your values
 
-# Proxy Configuration
-# Path to your proxy file (format: host:port:username:password per line)
-PROXY_FILE=/path/to/your/proxies.txt
+# =============================================================================
+# Required for Production
+# =============================================================================
 
-# Classifier Model Path
-# Path to the trained BoxVsPlayerClassifier model
-CLASSIFIER_PATH=./models/player_vs_box_classifier_combined.pkl
+# Secure secret key (generate with: python -c "import secrets; print(secrets.token_hex(32))")
+SECRET_KEY=change-me-in-production
 
-# Flask Configuration
+# Flask environment (development or production)
 FLASK_ENV=development
-FLASK_DEBUG=0
 
-# Server Configuration
-HOST=127.0.0.1
+# =============================================================================
+# Database
+# =============================================================================
+
+# PostgreSQL connection string (required for production)
+# Format: postgresql://user:password@host:port/database
+# DATABASE_URL=postgresql://bowman:password@localhost:5432/bowman_tracker
+
+# SQLite path (used if DATABASE_URL is not set)
+# DATABASE_PATH=./sales_history.db
+
+# =============================================================================
+# Server
+# =============================================================================
+
+# Server port
 PORT=5000
 
-# Scheduler Configuration
-# Interval in seconds between data fetches (default: 3600 = 1 hour)
-FETCH_INTERVAL=3600
+# Server host
+HOST=127.0.0.1
 
-# Auto-start scheduler on server startup (true/false)
-AUTO_SCHEDULE=false
+# Debug mode
+DEBUG=false
+
+# =============================================================================
+# Proxy Settings
+# =============================================================================
+
+# Enable/disable proxy usage for 130point requests
+USE_PROXIES=true
+
+# Path to proxy file
+# PROXY_FILE=./proxies.txt
+
+# =============================================================================
+# Scheduler
+# =============================================================================
+
+# Fetch interval in hours
+FETCH_INTERVAL_HOURS=1
+
+# Auto-start scheduler on server startup
+AUTO_START_SCHEDULER=false
+
+# =============================================================================
+# Monitoring (Optional)
+# =============================================================================
+
+# Sentry DSN for error monitoring
+# Get your DSN from https://sentry.io
+# SENTRY_DSN=https://your-key@sentry.io/project-id
+
+# Prometheus metrics are automatically exposed at /metrics
+# No additional configuration needed
+
+# =============================================================================
+# Data Retention
+# =============================================================================
+
+# Data retention period in days (default: 180)
+# DATA_RETENTION_DAYS=180
+
+# =============================================================================
+# Rate Limiting
+# =============================================================================
+
+# Requests per minute limit
+RATE_LIMIT_PER_MINUTE=60
+
+# Cache TTL in seconds
+SUMMARY_CACHE_TTL=60
+CHART_CACHE_TTL=30
