Fix: Add auto-starting scheduler for Railway
- Add AUTO_START_SCHEDULER env var support in app.py
- When set to 'true', scheduler starts automatically with the app
- Runs hourly data fetches in the background
- Update railway.toml with environment var documentation

--- a/railway.toml
+++ b/railway.toml
@@ -10,3 +10,14 @@ healthcheckPath = "/api/health"
 healthcheckTimeout = 30
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
+
+# Environment variables (set these in Railway dashboard for security)
+# Required:
+#   FLASK_ENV=production
+#   SECRET_KEY=your-secret-key
+#   AUTO_START_SCHEDULER=true  # Enables hourly background data fetching
+#   USE_PROXIES=false
+#
+# Optional:
+#   DATABASE_URL=postgresql://... (add PostgreSQL from Railway marketplace)
+#   SENTRY_DSN=https://...@sentry.io/...
