--- a/.env.example
+++ b/.env.example
@@ -39,7 +39,7 @@ DEBUG=false
 # Proxy Settings
 # =============================================================================
 
-# Enable/disable proxy usage for 130point requests
+# Enable/disable proxy usage for data fetching
 USE_PROXIES=true
 
 # Path to proxy file
